--- a/docs/issues/2024-09.rst
+++ b/docs/issues/2024-09.rst
@@ -43,6 +43,9 @@ VLMs
 `LONGVILA: SCALING LONG-CONTEXT VISUAL LANGUAGE MODELS FOR LONG VIDEOS <https://arxiv.org/pdf/2408.10188>`_
     NVIDIA continues to chip away at VLMs, this time giving VILA extra long context length.  Lots of good stuff in here about training, datasets, performance, etc.
 
+`EAGLE: Exploring The Design Space for Multimodal LLMs with Mixture of Encoders <https://arxiv.org/pdf/2408.15998>`_
+    NVIDIA and friends do a fairly in-depth analysis of a bunch of different ways you can make mulitmodal LLMs with a number of different vision encoders.  Finds that simple methods work just as well as more complex ones.
+
 Doctrinaire
 -----------
 `MESHANYTHING V2: ARTIST-CREATED MESH GENERATION WITH ADJACENT MESH TOKENIZATION <https://arxiv.org/pdf/2408.02555>`_
@@ -101,13 +104,18 @@ Gotta Go Fast
 `The Mamba in the Llama: Distilling and Accelerating Hybrid Models <https://arxiv.org/pdf/2408.15237>`_
     Takes a transformer and distills it down to an RNN without losing performance.  It's kind of interesting that this works better than training an RNN from scratch - or maybe the transformer was just trained better than the best RNN.
 
+Geometric Deep Learning
+-----------------------
+`Beyond Euclid: An Illustrated Guide to Modern Machine Learning with Geometric, Topological, and Algebraic Structures <https://www.arxiv.org/pdf/2407.09468>`_
+    Cool overview with lots of pictures. Doing ML in non-vector spaces is basically what we need to do.
+
+`The Role of Fibration Symmetries in Geometric Deep Learning <https://arxiv.org/pdf/2408.15894>`_
+    Geometric Deep Learning often relies on global symmetries for inference.  Global symmetries can be rare in practice, however, so this paper instead uses local symmetries - called fibration symmetries to make it seem fancy? - to improve inference.  A cool idea, but it has less performance comparisons than I would like.
+
 Theory
 ------
 `Disentangling Dense Embeddings with Sparse Autoencoders <https://arxiv.org/pdf/2408.00657>`_
     If you have dense embeddings, you can hit them with a sparse autoencoder and have sparse embeddings that maintain semantic fidelity.  Feels like there is something useful here, but can't quite put my finger on what.
-
-`Beyond Euclid: An Illustrated Guide to Modern Machine Learning with Geometric, Topological, and Algebraic Structures <https://www.arxiv.org/pdf/2407.09468>`_
-    Cool overview with lots of pictures. Doing ML in non-vector spaces is basically what we need to do.
 
 `Gemma Scope: Open Sparse Autoencoders Everywhere All At Once on Gemma 2 <https://arxiv.org/pdf/2408.05147>`_
     Deepmind explores some ways that sparse autoencoders are useful, with a look at the Gemma 2 family of models.  Seems like a decent overview
@@ -157,6 +165,9 @@ New Models
 
 `Sapiens: Foundation for Human Vision Models <https://arxiv.org/pdf/2408.12569>`_
     Meta releases a new foundation model for computer vision focussing on humans.  Seems decent, but rather limited in scope and the examples have large numbers of pixels on target, so likely not to be much use for us.
+
+`SciLitLLM: How to Adapt LLMs for Scientific Literature Understanding <https://arxiv.org/pdf/2408.15545>`_
+    A suite of LLMs to read scientic papers/abstracts and extract useful info in JSON format.  Seems useful for LitCoin.
 
 Lunch and Learn
 ---------------
